# bank-widget

./: .coverage  .flake8  .gitignore  README.md  main.py  pyproject.toml
src/: masks.py  processing.py
src/decorators/: log.py
src/generators/: cards.py  transactions.py
src/widget/: __init__.py
src/widget/masks/: __init__.py
tests/: conftest.py  test_decorators.py  test_generators.py  test_mask.py  test_processing.py  test_widget.py
