[tool.poetry]
name = "widget"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]
packages = [{include = "widget", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.lint.dependencies]
flake8 = "^6.0.0"
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
exclude = ".git"

[tool.isort]
profile = "black"
force_single_line = true

[tool.mypy]
python_version = "3.9"
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"
